2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-24  Andrew Sobala  <aes@gnome.org>

	* Makefile.am, apply-font.glade, themus-theme-applier.c:
	added GUI to ask if a font should be applied

2003-07-21  Andrew Sobala  <aes@gnome.org>

	As per comments on Usability@gnome.org:
	* Removed "Apply theme" context menu item
	* Made themes apply when you click on them instead

2003-07-20  Andrew Sobala  <aes@gnome.org>

	* themus-component.c: (impl_Bonobo_Listener_event): apply
	fonts (fixes: #109543)

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-15  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: fix server.in generation (fixes property page showing)

2003-06-06  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: fix from Rajkumar Sivasamy (originally for control-
	center) for extracting themes under default solaris install. WE NEED
	VFS SUPPORT FOR ARCHIVES! ;-)

2003-06-03  Andrew Sobala  <aes@gnome.org>

	* themus-properties-view.c: fix description word wrapping 
	* theme-method.c: gcc 2.x compile

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Moved to control-center.

2003-05-04  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: (do_open): fix pointer juggling that was causing
	nautilus crashes. Oops again.

2003-05-04  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: (do_close): remove some g_free s that were causing
	nautilus to hang. Oops.

2003-04-22  Andrew Sobala  <aes@gnome.org>

	* theme-method.conf: removed .so extension as per Christophe Fergeau's
	comments

2003-03-30  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: added themus.keys to DISTCLEAN

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* .cvsignore: updated

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: make the .keys file install properly